@@ -1,7 +1,7 @@
 package com.upside.branch_io.client;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Map;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -14,12 +14,12 @@ public class MockBranchClient implements BranchClient {
     private static final Logger LOGGER = LoggerFactory.getLogger(BranchClient.class);
 
     @Override
-    public URL createLink(String alias, String campaign, String channel, Map<String, String> data) {
+    public URI createLink(String alias, String campaign, String channel, Map<String, String> data) {
         try {
             LOGGER.warn("Creating a link with a Mock client.");
-            return new URL("http://foo.com/" + alias);
+            return new URI("http://foo.com/" + alias);
         }
-        catch (MalformedURLException ex) {
+        catch (URISyntaxException ex) {
             throw new RuntimeException("Couldn't create a fake link from MockBranchClient", ex);
         }
     }
